--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.SignupFormContainer,
+.LoginFormContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  text-align: center;
+  width: 100vw;
+  height: 100vh;
+}
+
+.SignupFormTitle,
+.LoginFormTitle {
+  margin-bottom: 1em;
+  padding: 1.5em;
+  font-size: 24px;
   color: white;
+  background-color: cadetblue;
+  font-weight: 800;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
 }
 
-.App-link {
-  color: #61dafb;
+.SignupForm,
+.LoginForm {
+  width: 360px;
+  box-shadow: rgb(0 0 0 / 16%) 1px 1px 10px;
+  padding-bottom: 20px;
+  border-radius: 8px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.SignupContent,
+.LoginContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-left: 12%;
+  padding-right: 12%;
+}
+
+label {
+  /* display: inline-block; */
+  width: 100%;
+  text-align: left;
+  padding: 1em;
+  font-size: 14px;
+  font-weight: 600;
+  color: rgb(34, 34, 34);
+}
+
+input {
+  padding: 10px;
+  width: 100%;
+}
+
+button {
+  color: white;
+  border: none;
+  background-color: #040488;
+  padding: 15px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.login_btn,
+.register_btn {
+  margin: 30px 0;
+  width: 100%;
+}
+
+.link_btn {
+  color: rgb(100, 100, 100);
+  background: none;
+  text-decoration: underline;
+}
+
+.calendar-wrapper {
+  height: 100vh;
+}
+
+#dayoffTitleName {
+  font-weight: bold;
+  font-size: 130%;
 }
