--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   text-align: center;
   width: 100vw;
   height: 100vh;
+  background-color: #2c4a52;
 }
 
 .SignupFormTitle,
@@ -24,7 +25,8 @@
 .SignupForm,
 .LoginForm {
   width: 360px;
-  box-shadow: rgb(0 0 0 / 16%) 1px 1px 10px;
+  background-color: rgb(241, 241, 241);
+  box-shadow: rgba(255, 255, 255, 0.16) 1px 1px 10px;
   padding-bottom: 20px;
   border-radius: 8px;
 }
@@ -56,7 +58,7 @@ input {
 button {
   color: white;
   border: none;
-  background-color: #040488;
+  background-color: #046c96;
   padding: 15px;
   font-weight: bold;
   cursor: pointer;
@@ -66,6 +68,7 @@ button {
 .register_btn {
   margin: 30px 0;
   width: 100%;
+  border-radius: 5px;
 }
 
 .link_btn {
